# cloud-translate

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: build.yml
src/: main.rs
