[package]
name = "cloud-translate"
version = "0.1.0"
authors = ["Martin Geisler <martin@geisler.net>"]
edition = "2021"
description = "Translate Gettext PO files using GCP Cloud Translate."
repository = "https://github.com/mgeisler/cloud-translate"
license = "Apache-2.0"
keywords = ["Gettext", "i18n", "translation"]
categories = ["command-line-utilities", "localization"]

[dependencies]
anyhow = "1.0.68"
env_logger = "0.10.0"
google-cloud-auth = "0.8.0"
polib = "0.1.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["full"] }
